Updated auth and added swagger comments
Auth will still be a part of the infrastructure in fact it is
