# storage/api-docs/api-docs.json
@@ -1,119 +1,1 @@
-{
-    "openapi": "3.0.0",
-    "info": {
-        "title": "Bpoint API",
-        "description": "This api will be consumed by the bpoint app, all endpoints are documented right here.",
-        "contact": {
-            "name": "Jordi Gómez Hidalgo",
-            "url": "https://github.com/gnugomez/",
-            "email": "gnugomez@gmail.com"
-        },
-        "license": {
-            "name": "MIT",
-            "url": "https://opensource.org/licenses/MIT"
-        },
-        "version": "0.0.1"
-    },
-    "paths": {
-        "/users": {
-            "get": {
-                "tags": [
-                    "users"
-                ],
-                "summary": "List all users",
-                "responses": {
-                    "200": {
-                        "description": "Return a list of users"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "users"
-                ],
-                "summary": "Create a new user",
-                "parameters": [
-                    {
-                        "name": "username",
-                        "in": "query",
-                        "description": "New user username",
-                        "required": true
-                    },
-                    {
-                        "name": "email",
-                        "in": "query",
-                        "description": "New user email",
-                        "required": true
-                    },
-                    {
-                        "name": "password",
-                        "in": "query",
-                        "description": "New user password",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "400": {
-                        "description": "Bad request"
-                    },
-                    "201": {
-                        "description": "User added",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/User"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/users/{id}": {
-            "delete": {
-                "tags": [
-                    "users"
-                ],
-                "summary": "Delete user",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "User deleted"
-                    }
-                }
-            }
-        }
-    },
-    "components": {
-        "schemas": {
-            "User": {
-                "title": "User",
-                "description": "User",
-                "properties": {
-                    "id": {
-                        "type": "integer"
-                    },
-                    "username": {
-                        "type": "string"
-                    },
-                    "email": {
-                        "type": "string"
-                    },
-                    "created_at": {
-                        "type": "string"
-                    },
-                    "updated_at": {
-                        "type": "string"
-                    }
-                },
-                "type": "object"
-            }
-        }
-    }
-}
+{"openapi":"3.0.0","info":{"title":"Bpoint API","description":"This api will be consumed by the bpoint app, all endpoints are documented right here.","contact":{"name":"Jordi G\u00f3mez Hidalgo","url":"https:\/\/github.com\/gnugomez\/","email":"gnugomez@gmail.com"},"license":{"name":"MIT","url":"https:\/\/opensource.org\/licenses\/MIT"},"version":"0.0.1"},"paths":{"\/auth\/validate":{"post":{"tags":["auth"],"summary":"Validate credentials to get a token","parameters":[{"name":"username","in":"query","description":"New user username","required":true},{"name":"password","in":"query","description":"New user password","required":true}],"responses":{"200":{"description":"Successful returns token with expiration time"},"401":{"description":"Unauthorized"}}}},"\/users":{"get":{"tags":["users"],"summary":"List all users","responses":{"200":{"description":"Return a list of users"}},"security":[{"jwt":[]}]},"put":{"tags":["users"],"summary":"Create a new user","parameters":[{"name":"username","in":"query","description":"New user username","required":true},{"name":"email","in":"query","description":"New user email","required":true},{"name":"password","in":"query","description":"New user password","required":true}],"responses":{"400":{"description":"Bad request"},"201":{"description":"User added","content":{"application\/json":{"schema":{"$ref":"#\/components\/schemas\/User"}}}}}}},"\/users\/{id}":{"delete":{"tags":["users"],"summary":"Delete user","parameters":[{"name":"id","in":"path","required":true}],"responses":{"200":{"description":"User deleted"}},"security":[{"jwt":[]}]}},"\/users\/me":{"get":{"tags":["users"],"summary":"Get current user","responses":{"200":{"description":"Successful returns current user","content":{"application\/json":{"schema":{"$ref":"#\/components\/schemas\/User"}}}}},"security":[{"jwt":[]}]}}},"components":{"schemas":{"User":{"title":"User","description":"User","properties":{"id":{"type":"integer"},"username":{"type":"string"},"email":{"type":"string"},"created_at":{"type":"string"},"updated_at":{"type":"string"}},"type":"object"}},"securitySchemes":{"jwt":{"type":"http","scheme":"bearer","in":"header","bearerFormat":"JWT","scopes":{"read":"read"}}}}}
